--- a/src/main/resources/reports/Invoice.jrxml
+++ b/src/main/resources/reports/Invoice.jrxml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.21.2 using JasperReports Library version 6.21.2 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports"
-              xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-              xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components"
-              xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd"
-              name="Invoice" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30" uuid="1c81cef1-8b6a-471a-b1b4-8e6d6933400a">
-
-    <!-- Properties -->
+<!-- Created with Jaspersoft Studio version 6.21.2.final using JasperReports Library version 6.21.2-8434a0bd7c3bbc37cbf916f2968d35e4b165821a  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Invoice" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="30" bottomMargin="30" uuid="1c81cef1-8b6a-471a-b1b4-8e6d6933400a">
     <property name="ireport.jasperserver.url" value="http://127.0.0.1:8080/jasperserver-pro/"/>
     <property name="ireport.jasperserver.user" value="jasperadmin"/>
     <property name="ireport.jasperserver.report.resource" value="/public/Christoph/Invoice_files/Invoice_"/>
     <property name="ireport.jasperserver.reportUnit" value="/public/Christoph/Invoice"/>
     <property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
-
-    <!-- Styles -->
-    <style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
+    <style name="Table_2_TH" mode="Opaque" backcolor="#F0F8FF">
         <box>
             <pen lineWidth="0.5" lineColor="#000000"/>
         </box>
     </style>
-    <style name="Table_CH" mode="Opaque" backcolor="#BFE1FF">
+    <style name="Table_2_CH" mode="Opaque" backcolor="#BFE1FF">
         <box>
             <pen lineWidth="0.5" lineColor="#000000"/>
         </box>
     </style>
-    <style name="Table_TD" mode="Opaque" backcolor="#FFFFFF">
+    <style name="Table_2_TD" mode="Opaque" backcolor="#FFFFFF">
         <box>
             <pen lineWidth="0.5" lineColor="#000000"/>
         </box>
     </style>
-
-    <!-- Parameters -->
+    <subDataset name="Dataset1" uuid="935987fb-21f7-4bca-ad39-961e7491b7a3">
+        <field name="id" class="java.lang.Long"/>
+        <field name="produit.designation" class="java.lang.String"/>
+        <field name="quantite" class="java.lang.Long"/>
+        <field name="prixUnitaire" class="java.math.BigDecimal"/>
+        <field name="montantTotalParProduit" class="java.math.BigDecimal"/>
+    </subDataset>
     <parameter name="CollectionBeanParam" class="net.sf.jasperreports.engine.data.JRBeanCollectionDataSource"/>
-
-    <!-- Fields -->
+    <parameter name="total" class="java.math.BigDecimal"/>
     <field name="id" class="java.lang.Integer"/>
     <field name="numeroFacture" class="java.lang.Long"/>
     <field name="dateFacture" class="java.util.Date"/>
@@ -41,12 +37,11 @@
     <field name="statut" class="java.lang.String"/>
     <field name="client.email" class="java.lang.String"/>
     <field name="client.telephone" class="java.lang.String"/>
-
-    <!-- Title Band -->
+    <field name="detFactures" class="java.util.List"/>
     <title>
-        <band height="50">
+        <band height="30">
             <staticText>
-                <reportElement x="0" y="0" width="555" height="30" uuid="e71d0b4d-9077-4098-927d-3cc9a0c7e348"/>
+                <reportElement x="0" y="-20" width="555" height="30" uuid="e71d0b4d-9077-4098-927d-3cc9a0c7e348"/>
                 <textElement textAlignment="Center">
                     <font size="18" isBold="true"/>
                 </textElement>
@@ -54,8 +49,6 @@
             </staticText>
         </band>
     </title>
-
-    <!-- Page Header Band -->
     <pageHeader>
         <band height="50">
             <staticText>
@@ -82,10 +75,8 @@
             </textField>
         </band>
     </pageHeader>
-
-    <!-- Detail Band -->
     <detail>
-        <band height="50">
+        <band height="200">
             <staticText>
                 <reportElement x="0" y="0" width="150" height="20" uuid="2f9c10ea-9277-4f21-91bb-7f5c058c4865"/>
                 <textElement>
@@ -108,16 +99,102 @@
                 <reportElement x="150" y="20" width="200" height="20" uuid="4b3a61e2-fd98-4870-995a-02808133e600"/>
                 <textFieldExpression><![CDATA[$F{client.telephone}]]></textFieldExpression>
             </textField>
-        </band>
-
-        <band height="180">
-            <subreport>
-                <reportElement x="0" y="0" width="555" height="180" uuid="30335697-484a-433d-9d23-736959e57067"/>
-                <subreportExpression><![CDATA["detFacturesSnubReport.jrxml"]]></subreportExpression>
-                <datasetRun subDataset="detFacturesDataset">
-                    <dataSourceExpression><![CDATA[$P{CollectionBeanParam}]]></dataSourceExpression>
-                </datasetRun>
-            </subreport>
+            <componentElement>
+                <reportElement x="0" y="70" width="555" height="90" uuid="78071fd4-04cf-4be3-a3ac-9585befa7280">
+                    <property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+                    <property name="com.jaspersoft.studio.table.style.table_header" value="Table_2_TH"/>
+                    <property name="com.jaspersoft.studio.table.style.column_header" value="Table_2_CH"/>
+                    <property name="com.jaspersoft.studio.table.style.detail" value="Table_2_TD"/>
+                </reportElement>
+                <jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
+                    <datasetRun subDataset="Dataset1" uuid="eea62785-be0a-4861-9a27-91d9efacb061">
+                        <dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{detFactures})]]></dataSourceExpression>
+                    </datasetRun>
+                    <jr:column width="40" uuid="2e38b388-4433-4410-a585-d81d92ae7609">
+                        <property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
+                        <jr:tableHeader style="Table_2_TH" height="30" rowSpan="1">
+                            <staticText>
+                                <reportElement x="0" y="0" width="40" height="30" uuid="10bbfbf6-ef20-4b8c-93fe-4cf9dfab1308"/>
+                                <text><![CDATA[ID]]></text>
+                            </staticText>
+                        </jr:tableHeader>
+                        <jr:detailCell style="Table_2_TD" height="30">
+                            <textField>
+                                <reportElement x="0" y="0" width="40" height="30" uuid="d6dcf477-0998-404b-9f0e-b566a504c865"/>
+                                <textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
+                            </textField>
+                        </jr:detailCell>
+                    </jr:column>
+                    <jr:column width="140" uuid="49282a48-fc04-48fd-a91c-82a919aa378d">
+                        <property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
+                        <jr:tableHeader style="Table_2_TH" height="30" rowSpan="1">
+                            <staticText>
+                                <reportElement x="0" y="0" width="140" height="30" uuid="a6594396-5e61-4950-af22-d5c1e577353c"/>
+                                <text><![CDATA[Produit Designation]]></text>
+                            </staticText>
+                        </jr:tableHeader>
+                        <jr:detailCell style="Table_2_TD" height="30">
+                            <textField>
+                                <reportElement x="0" y="0" width="140" height="30" uuid="a89e09d8-66f8-4677-9cb7-608f8fc05b5b"/>
+                                <textFieldExpression><![CDATA[$F{produit.designation}]]></textFieldExpression>
+                            </textField>
+                        </jr:detailCell>
+                    </jr:column>
+                    <jr:column width="140" uuid="37019bbd-eba7-4489-80b7-8e109f4cd070">
+                        <property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
+                        <jr:tableHeader style="Table_2_TH" height="30" rowSpan="1">
+                            <staticText>
+                                <reportElement x="0" y="0" width="140" height="30" uuid="b5843e51-d1d8-4ced-ac17-408bf8995b0a"/>
+                                <text><![CDATA[Quantité]]></text>
+                            </staticText>
+                        </jr:tableHeader>
+                        <jr:detailCell style="Table_2_TD" height="30">
+                            <textField>
+                                <reportElement x="0" y="0" width="140" height="30" uuid="d462675d-ca72-4ed2-97ae-4c5ed1750a65"/>
+                                <textFieldExpression><![CDATA[$F{quantite}]]></textFieldExpression>
+                            </textField>
+                        </jr:detailCell>
+                    </jr:column>
+                    <jr:column width="105" uuid="d99ec502-c467-401c-acfb-114ca7a4e3fb">
+                        <property name="com.jaspersoft.studio.components.table.model.column.name" value="Column4"/>
+                        <jr:tableHeader style="Table_2_TH" height="30" rowSpan="1">
+                            <staticText>
+                                <reportElement x="0" y="0" width="105" height="30" uuid="3ff45986-7dc0-4475-9686-6fda72371e99"/>
+                                <text><![CDATA[Prix Unitaire]]></text>
+                            </staticText>
+                        </jr:tableHeader>
+                        <jr:detailCell style="Table_2_TD" height="30">
+                            <textField>
+                                <reportElement x="0" y="0" width="105" height="30" uuid="d6dcf477-0998-404b-9f0e-b566a504c865"/>
+                                <textFieldExpression><![CDATA[$F{prixUnitaire}]]></textFieldExpression>
+                            </textField>
+                        </jr:detailCell>
+                    </jr:column>
+                    <jr:column width="125" uuid="385e1266-47c3-4c4f-875f-3f3a3e39c7fa">
+                        <property name="com.jaspersoft.studio.components.table.model.column.name" value="Column5"/>
+                        <jr:tableHeader style="Table_2_TH" height="30" rowSpan="1">
+                            <staticText>
+                                <reportElement x="0" y="0" width="125" height="30" uuid="6c5ab07a-07c3-4559-9813-8e012f432de8"/>
+                                <text><![CDATA[Total par produit]]></text>
+                            </staticText>
+                        </jr:tableHeader>
+                        <jr:detailCell style="Table_2_TD" height="30">
+                            <textField>
+                                <reportElement x="0" y="0" width="125" height="30" uuid="6edd1452-e6ec-4721-bcd0-26c39363f288"/>
+                                <textFieldExpression><![CDATA[$F{montantTotalParProduit}]]></textFieldExpression>
+                            </textField>
+                        </jr:detailCell>
+                    </jr:column>
+                </jr:table>
+            </componentElement>
+            <staticText>
+                <reportElement x="400" y="180" width="100" height="20" uuid="8c4b6c5e-c1d6-4a6e-819e-42b3b5bc0135"/>
+                <text><![CDATA[Total Amount:]]></text>
+            </staticText>
+            <textField>
+                <reportElement x="500" y="180" width="100" height="20" uuid="04f8a4da-9f1e-4b3e-9fbb-305cb9eb7d2d"/>
+                <textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
+            </textField>
         </band>
     </detail>
 </jasperReport>
