--- a/src/main/resources/reports/achat.jrxml
+++ b/src/main/resources/reports/achat.jrxml
@@ -175,12 +175,16 @@
                 </jr:table>
             </componentElement>
             <staticText>
-                <reportElement x="400" y="210" width="100" height="20" uuid="8c4b6c5e-c1d6-4a6e-819e-42b3b5bc0135"/>
+                <reportElement x="380" y="210" width="100" height="20" uuid="8c4b6c5e-c1d6-4a6e-819e-42b3b5bc0135"/>
                 <text><![CDATA[Total Amount:]]></text>
             </staticText>
             <textField>
-                <reportElement x="500" y="210" width="100" height="20" uuid="04f8a4da-9f1e-4b3e-9fbb-305cb9eb7d2d"/>
+                <reportElement x="480" y="210" width="100" height="20" uuid="04f8a4da-9f1e-4b3e-9fbb-305cb9eb7d2d"/>
                 <textFieldExpression><![CDATA[$P{total}]]></textFieldExpression>
+            </textField>
+            <textField>
+                <reportElement x="380" y="170" width="200" height="20" uuid="af4f1148-c768-43d2-a654-bf7e0ea627eb"/>
+                <textFieldExpression><![CDATA[$F{statusAchat}]]></textFieldExpression>
             </textField>
         </band>
     </detail>
